hphp/hack/test/ifc/check/class_generics.php.exp
=== IFC analysis results for class_generics.php
File "class_generics.php", line 43, characters 3-23:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "class_generics.php", line 16, characters 14-15:
  This may be the data source with policy `B`
  File "class_generics.php", line 8, characters 14-15:
  This may be the data sink with policy `A`
  File "class_generics.php", line 8, characters 14-15:
  Another program point contributing to the illegal flow
File "class_generics.php", line 44, characters 3-23:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "class_generics.php", line 8, characters 14-15:
  This may be the data source with policy `A`
  File "class_generics.php", line 16, characters 14-15:
  This may be the data sink with policy `B`
  File "class_generics.php", line 16, characters 14-15:
  Another program point contributing to the illegal flow
File "class_generics.php", line 36, characters 3-25:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "class_generics.php", line 16, characters 14-15:
  This may be the data source with policy `B`
  File "class_generics.php", line 8, characters 14-15:
  This may be the data sink with policy `A`
  File "class_generics.php", line 23, characters 3-17:
  Another program point contributing to the illegal flow
  File "class_generics.php", line 8, characters 14-15:
  Another program point contributing to the illegal flow
File "class_generics.php", line 30, characters 3-28:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "class_generics.php", line 8, characters 14-15:
  This may be the data source with policy `A`
  File "class_generics.php", line 16, characters 14-15:
  This may be the data sink with policy `B`
  File "class_generics.php", line 24, characters 3-15:
  Another program point contributing to the illegal flow
  File "class_generics.php", line 16, characters 14-15:
  Another program point contributing to the illegal flow
